--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -179,35 +179,37 @@
             <br>
             <h1 id="event_name">Register for Maze Solver</h1>
             <form id="studentForm" action="" method="" onsubmit="validateForm(event)">
-
-                <div class="id_elm">
-                    <label for="college">Member 1</label><br>
-                    <div class="ip_flx">
-                        <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
-                        <button>Get</button>
+                <div class="tru_con">
+                    <div class="id_elm">
+                        <label for="college">Member 1</label><br>
+                        <div class="ip_flx">
+                            <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
+                            <button class="gt_btn" type="button">Get</button>
+                        </div>
+                        <h6 class="name">student name</h6>
                     </div>
-                    <h6 class="name">student name</h6>
+
+                    <div class="id_elm">
+                        <label for="college">Member 1</label><br>
+                        <div class="ip_flx">
+                            <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
+                            <button class="gt_btn" type="button">Get</button>
+                        </div>
+                        <h6 class="name">student name</h6>
+
+                    </div>
+
+                    <div class="id_elm">
+                        <label for="college">Member 1</label><br>
+                        <div class="ip_flx">
+                            <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
+                            <button class="gt_btn" type="button">Get</button>
+                        </div>
+                        <h6 class="name">student name</h6>
+                    </div>
                 </div>
 
-                <div class="id_elm">
-                    <label for="college">Member 1</label><br>
-                    <div class="ip_flx">
-                        <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
-                        <button>Get</button>
-                    </div>
-                    <h6 class="name">student name</h6>
-
-                </div>
-
-                <div class="id_elm">
-                    <label for="college">Member 1</label><br>
-                    <div class="ip_flx">
-                        <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
-                        <button>Get</button>
-                    </div>
-                    <h6 class="name">student name</h6>
-                </div>
-
+                <h4>Add member <span><img src="img/add.svg" alt=""></span></h4>
 
                 <input id="submit" type="submit" value="Submit">
             </form>
