--- a/el_futurix/cad.html
+++ b/el_futurix/cad.html
@@ -193,7 +193,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size: <span class="val"> 1 </span></div>
-            <div class="key">Registration Fee: <span class="val"> 149 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 149 </span></div>
             <div class="key">Registration Deadline: <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Abarna R - 9361178039</div>
