--- a/el_futurix/cinema.html
+++ b/el_futurix/cinema.html
@@ -193,7 +193,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 1 - 2 </span></div>
-            <div class="key">Registration Fee : <span class="val"> 149/Team (or) 99/person </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 149/Team (or) ₹ 99/person </span></div>
             
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key">For Further Information:
