--- a/el_futurix/cyber.html
+++ b/el_futurix/cyber.html
@@ -190,7 +190,7 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
-            <div class="key">Registration Fee : <span class="val"> 200 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 200 </span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Vasuki S - 9597488715</div>
