--- a/el_futurix/drone.html
+++ b/el_futurix/drone.html
@@ -193,7 +193,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size: <span class="val"> 1-5 </span></div>
-            <div class="key">Registration Fee: <span class="val"> 499 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 499 </span></div>
             <div class="key">Registration Deadline: <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Kishore Kanna P - 9790440993</div>
