--- a/el_futurix/combo.html
+++ b/el_futurix/combo.html
@@ -60,7 +60,7 @@
 
     <div class="container">
         <h1>Coming Soon</h1>
-        <p>We're working hard to bring something amazing!</p>
+        <p>Exciting combos will reach you soon!!</p>
     </div>
 
 </body>
