--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -194,7 +194,7 @@
             <div class="btn" onclick="reg_op">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 1 - 2 </span></div>
-            <div class="key">Registration Fee : <span class="val"> 449 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 449 </span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024</span></div>
             <div class="key">For Further Information:
                 <div class="val">Kavin R V - 6381314154</div>
