--- a/el_futurix/paperpresentation.html
+++ b/el_futurix/paperpresentation.html
@@ -193,7 +193,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 1 - 4 </span></div>
-            <div class="key">Registration Fee : <span class="val"> 499 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 499 </span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Dhevitha S - 6379688496</div>
