--- a/el_futurix/get_details.html
+++ b/el_futurix/get_details.html
@@ -228,12 +228,13 @@
                 student_name: document.getElementById("student-name").value,
                 salutation: document.getElementById("salutation").value,
                 designation: document.getElementById("designation").value,
+                stream: document.getElementById("stream-of-study").value,
                 college_name: document.getElementById("college-name").value,
                 course: document.getElementById("course").value,
                 year: document.getElementById("year").value,
                 whatsapp: document.getElementById("whatsapp").value,
                 phone: document.getElementById("phone").value,
-                phone: document.getElementById("email").value
+                email: document.getElementById("email").value
             }
 
             postFirstLogin(obj)
