--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -47,6 +47,7 @@
         right: 0;
         bottom: 0;
         background-color: #00000096;
+
         /* padding: 20px; */
         /* box-sizing: border-box; */
         /* background-color: #79acffdd; */
@@ -61,6 +62,8 @@
         border-radius: 15px;
         background-color: rgba(0, 0, 0, 0.999);
         position: relative;
+        overflow-y: auto;
+        max-height: calc(100vh - 150px);
     }
 
     #frm_cnt .close {
@@ -169,6 +172,125 @@
         margin-left: auto;
         margin-top: 10px;
     }
+
+    .key {
+  font-weight: 700;
+  font-size: x-large;
+  color: #00d9ff;
+  background-color: #2c0d0d;
+  border-radius: 5px;
+  padding: 5px;
+  width: fit-content;
+  margin-bottom: 5px;
+}
+
+.val {
+  font-weight: 100;
+  color: #ffffff;
+}
+
+body{
+  padding-bottom: 100px;
+}
+
+#frm_cnt input {
+  border: none;
+  border-bottom: solid #ffffff 1px;
+  border-radius: 0;
+}
+
+#frm_cnt #submit {
+  border: none;
+  border-radius: 5px;
+  background-color: aquamarine;
+  color: rgb(29, 27, 27);
+}
+
+.rule_book {
+  font-size: larger;
+  font-weight: 800;
+  color: #00D9FF;
+}
+
+input {
+  padding: 8px;
+  width: 70%;
+  /* height: 40px; */
+  margin: 0;
+  border: 0;
+}
+
+button {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+.name-display {
+  font-size: 0.9em;
+  color: #555;
+  margin-top: 5px;
+}
+
+
+@media (max-width: 1000px) {
+  .container {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    align-items: unset;
+  }
+} 
+
+@media (max-width: 430px) {
+  .container {
+    align-items: unset;
+  }
+} 
+
+.ip_flx{
+  display: flex;
+}
+
+.ip_flx button{
+  border: 0;
+  background-color: #00D9FF;
+  border-radius: 3px;
+  color: black;
+  font-size: x-large;
+  font-weight: 700;
+  height: 30px;
+  /* width: 40px; */
+  padding: 3px;
+  position: relative;
+  top: 10px;
+  margin-left: 10px;
+}
+
+.name{
+  font-size: small;
+  margin: 0;
+  color: #555;
+}
+
+.id_elm{
+  margin-bottom: 60px;
+}
+
+form h4{
+  cursor: pointer;
+}
+
+form h4:hover{
+  color: aqua;
+}
+
+form span{
+  position: relative;
+  top: 8px;
+}
 </style>
 
 <body>
@@ -178,38 +300,24 @@
             <div class="close">X</div>
             <br>
             <h1 id="event_name">Register for Maze Solver</h1>
-            <form id="studentForm" action="" method="" onsubmit="validateForm(event)">
+
+            <form id="studentForm" action="" method="" onsubmit="">
+                <label for="college">Team name</label>
+                <input type="text" id="team-name" placeholder="Team name" required>
+                <br><br><br>
                 <div class="tru_con">
                     <div class="id_elm">
-                        <label for="college">Member 1</label><br>
+                        <label for="college">Member 1 (leader)</label><br>
                         <div class="ip_flx">
-                            <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
-                            <button class="gt_btn" type="button">Get</button>
+                            <input type="text" class="id_flds" id="mem1" name="Member-1" placeholder="Member ID"
+                                required><br><br>
+                            <!-- <button class="gt_btn" type="button">Get</button> -->
                         </div>
-                        <h6 class="name">student name</h6>
-                    </div>
-
-                    <div class="id_elm">
-                        <label for="college">Member 1</label><br>
-                        <div class="ip_flx">
-                            <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
-                            <button class="gt_btn" type="button">Get</button>
-                        </div>
-                        <h6 class="name">student name</h6>
-
-                    </div>
-
-                    <div class="id_elm">
-                        <label for="college">Member 1</label><br>
-                        <div class="ip_flx">
-                            <input type="text" id="mem1" name="Member-1" placeholder="Member ID" required><br><br>
-                            <button class="gt_btn" type="button">Get</button>
-                        </div>
-                        <h6 class="name">student name</h6>
+                        <h6 class="nameOfID">student name</h6>
                     </div>
                 </div>
 
-                <h4>Add member <span><img src="img/add.svg" alt=""></span></h4>
+                <h4 onclick="add_mem_fld(3)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
                 <input id="submit" type="submit" value="Submit">
             </form>
@@ -244,28 +352,108 @@
     <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.js"></script>
     <script type="module">
+
+        var competitionID = "1HFUDpVdTCKQ7Pi9TH8f"
+
+        import { get_details } from './login.js'
+        import { getStudentEmailById, getStudentByEmail, createTeam, isStudentRegisteredForCompetition } from "./reg.js"
+
+        var cur_std = ""
+
+        // document.getElementsByClassName('btn')[0].innerHTML
+
+        get_details().then((userDetails) => {
+            if (userDetails) {
+                console.log(userDetails);
+                    isStudentRegisteredForCompetition(userDetails.email, competitionID)
+                        .then(isRegistered => {
+                            if (isRegistered) {
+                                console.log("The student is registered for this competition.");
+                                document.getElementsByClassName('btn')[0].innerHTML = "Registered"
+                                document.getElementsByClassName('btn')[0].onclick = "unset"
+                            } else {
+                                document.getElementsByClassName('btn')[0].onclick = reg_op
+                                console.log("The student is not registered for this competition.");
+                            }
+                        });
+                
+            } else {
+                console.log("No user is signed in.");
+                alert("login before registering...");
+            }
+        }).catch((error) => {
+            console.error("Error getting user details:", error);
+        });
+
+
+        document.getElementById("studentForm").onsubmit = validateForm;
+        var flg_a = true
         function validateForm(event) {
             event.preventDefault();
+            // console.log("sdwd");
+            // return
 
-            var name = document.getElementById("name").value;
-            var college = document.getElementById("college").value;
-            var contact = document.getElementById("contact").value;
-            var contactPattern = /^[0-9]{10}$/; // Regex pattern for 10-digit numbers
+            if (flg_a) {
+                flg_a = false;
+                let fg = true;
+                let obj = {
+                    leader: "",
+                    members: []
+                };
 
-            // Validate form fields
-            if (name === "" || college === "" || contact === "") {
-                alert("All fields are required!");
-                return false;
+                // Collect all the promises for async calls
+                let promises = [];
+
+                // Get all elements with the class "id_flds"
+                document.querySelectorAll(".id_flds").forEach(elm => {
+                    if (fg) {
+                        obj.leader = elm.value;
+                        fg = false;
+                    } else {
+                        // Store each async getStudentEmailById call in the promises array
+                        const promise = getStudentEmailById(elm.value)
+                            .then((o) => {
+                                if (o) {
+                                    obj.members.push(elm.value);
+                                }
+                            }).catch(error => {
+                                console.error("Error occurred:", error);
+                                return
+                            });
+
+                        promises.push(promise); // Add the promise to the array
+                    }
+                });
+
+                // Once all promises are resolved, execute the final action
+                Promise.all(promises).then(() => {
+                    console.log("All data fetched, triggering final action...");
+                    // Trigger your final function or action here
+                    console.log(obj);
+                    var tmp_arr = obj.members
+                    tmp_arr.push(obj.leader)
+                    if (new Set(obj.members).size !== obj.members.length) {
+                        alert("Duplicate IDs not allowed");
+                    } else {
+                        getStudentEmailById(obj.leader)
+                            .then((o) => {
+                                if (o) {
+                                    createTeam(competitionID, document.getElementById("team-name").value, o.email, obj.leader).then(() => {
+                                        alert("registed successfully")
+                                        document.getElementById("frm_cv").style.display = "none";
+                                        document.getElementsByClassName("btn")[0].style.innerHTML = "Registered"
+                                    })
+                                }
+                            }).catch(error => {
+                                console.error("Error occurred:", error);
+                                return
+                            });
+                    }
+                }).catch(error => {
+                    console.error("Error occurred during async operations:", error);
+                });
+
             }
-
-            // Validate contact number format
-            if (!contactPattern.test(contact)) {
-                alert("Please enter a valid 10-digit contact number.");
-                return false;
-            }
-
-            alert("Registed successfully!");
-            document.getElementById("frm_cv").style.display = 'none'
         }
 
         // document.getElementById("frm_cv").style.
@@ -274,14 +462,18 @@
         rg.style.marginLeft = (window.innerWidth - 354) / 2 + 'px'
         document.getElementById("frm_cv").style.display = 'none'
 
-        import { get_details } from './login.js'
-        document.getElementsByClassName('btn')[0].onclick = reg_op
         function reg_op() {
             get_details().then((userDetails) => {
                 if (userDetails) {
                     console.log("user loged in");
                     console.log(userDetails);
                     document.getElementById("frm_cv").style.display = 'block'
+                    document.getElementsByClassName("nameOfID")[0].innerHTML = userDetails.name
+                    getStudentByEmail(userDetails.email).then((dta) => {
+                        cur_std = dta.id;
+                        document.getElementById("mem1").value = dta.id;
+                        document.getElementById("mem1").readOnly = true;
+                    })
                 } else {
                     console.log("No user is signed in.");
                     alert("login before registering...");
@@ -295,6 +487,28 @@
         function reg_cl() {
             document.getElementById("frm_cv").style.display = 'none'
         }
+
+
+        document.addEventListener('click', function (event) {
+            // Check if the clicked element has the class 'gt_btn'
+            if (event.target.classList.contains('gt_btn')) {
+                // Call your function when a '.gt_btn' element is clicked
+                var nme_hre = event.target.parentElement.parentElement.getElementsByClassName("nameOfID")[0]
+                var if_fld = event.target.parentElement.getElementsByClassName("id_flds")[0]
+
+                getStudentEmailById(if_fld.value).then((obj) => {
+                    if (obj != null) {
+                        nme_hre.innerHTML = obj.name
+                        console.log("Retrieved Student Email:", obj.email); // Use obj.email since email is the expected property
+                    } else {
+                        nme_hre.innerHTML = "invalid"
+                    }
+                }).catch(error => {
+                    console.error("Error occurred:", error);
+                    alert("couldnt connect");
+                });
+            }
+        });
     </script>
 </body>
 <script src="lolita.js"></script>
