--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -324,28 +324,27 @@ form span{
         </div>
     </div>
 
+
     <div class="container">
         <div class="image">
-            <img src="img/thumbs/maze.webp" alt="Competition Image">
+            <img src="img/thumbs/Product XPO.webp" alt="Competition Image">
         </div>
         <div class="description">
-            <h1>MAZE MASTER BOT </h1>
+            <h1>PROJECT XPO</h1>
             <p>
-                Enter the "Maze Explorer", where tiny robots navigate intricate mazes with precision. Watch as these
-                self-governing marvels navigate their way to victory, demonstrating the combination of strategy and
-                technology. Encourage these tiny explorers as they forge ahead in the field of robotics. Come witness a
-                spectacular display of inventiveness and resourcefulness across the competition lines.
-            </p>
-            <div class="btn">Register</div>
+                Embark on an innovative journey at "Project Xpo" where experts, scholars, and visionaries converge to showcase groundbreaking projects and inventive solutions. This prestigious platform fosters an environment where ideas flourish, and boundaries are pushed. Don’t miss the chance to participate in this transformative event, where creativity knows no bounds !
             <br>
-            <div class="key">Team size : <span class="val"> 1 - 2 </span></div>
-            <div class="key">Registration Fee : <span class="val"> 449 </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024</span></div>
-            <div class="key"> For Quries :
-                <div class="val">Kavin R V - 6381314154</div>
-                <div class="val">Gowtham T - 9042416640</div>
+                <a class="rule_book" href="https://drive.google.com/file/d/1FuANRxK5jcRMLy28lbZ-tIPLG-uMURjA/view?usp=sharing" target="_blank">RULE BOOK</a>
+            </p>
+            <div class="btn">REGISTER HERE</div>
+            <br>
+            <div class="key">Team size : <span class="val"> 2 - 4 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 499 </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
+            <div class="key"> For Further Information:
+                <div class="val">Abirami M - 9345445205</div>
+                 <div class="val">Logeshwaran K - 8610687966</div>
             </div>
-
         </div>
     </div>
 
