--- a/el_futurix/general.html
+++ b/el_futurix/general.html
@@ -41,7 +41,7 @@
             <img src="img/thumbs/General.png" alt="Competition Image">
         </div>
         <div class="description">
-            <h1>Unparalleled Experience of Learning</h1>
+            <h1>Unparalleled Experience of Learning, Networking & Digitalizing</h1>
             <p>
                 Unlock the power of digital transformation through an engaging and interactive workshop that blends learning, networking, and the art of digitalization. Explore cutting-edge trends and innovations that are shaping industries today. Participants will gain insights into how digitalization can optimize processes, enhance connectivity, and foster innovation. The session will feature thought-provoking discussions, interactive learning, and opportunities to build connections with like-minded peers and professionals. This is your chance to step into the future of technology and business!
             </p>
