--- a/el_futurix/arvr.html
+++ b/el_futurix/arvr.html
@@ -58,7 +58,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "m4l2L0xYZkuplUvZTvT9"
     </script>
 
 
