--- a/el_futurix/bridgebuilding.html
+++ b/el_futurix/bridgebuilding.html
@@ -62,7 +62,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "CM2Tr62L2pHwkNee9w7l"
     </script>
 
 
