--- a/el_futurix/cinema.html
+++ b/el_futurix/cinema.html
@@ -63,7 +63,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "e8Mm9uArBKwZgRUVUQ3s"
     </script>
 
 
