--- a/el_futurix/circuit.html
+++ b/el_futurix/circuit.html
@@ -63,7 +63,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "EVnYD3mLlWep470BWgN7"
     </script>
 
 
