--- a/el_futurix/coderarena.html
+++ b/el_futurix/coderarena.html
@@ -64,7 +64,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "XFEf0iFYWd6FiJTlm5RH"
     </script>
 
 
