--- a/el_futurix/cyber.html
+++ b/el_futurix/cyber.html
@@ -59,7 +59,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "p564W5i3pRR3zYKAWDRw"
     </script>
 
 
