--- a/el_futurix/drone.html
+++ b/el_futurix/drone.html
@@ -64,7 +64,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "u8Y9PtP7LpINwMGCYf1H"
     </script>
 
 
