--- a/el_futurix/general.html
+++ b/el_futurix/general.html
@@ -58,7 +58,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "1HFUDpVdTCKQ7Pi9TH8f"
     </script>
 
 
