--- a/el_futurix/investigator.html
+++ b/el_futurix/investigator.html
@@ -62,7 +62,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "tOzmMoQgsbHYkw2sN0Sm"
     </script>
 
 
