--- a/el_futurix/ipl.html
+++ b/el_futurix/ipl.html
@@ -64,7 +64,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "qezgMecXb91okgGcOSBL"
     </script>
 
 
