--- a/el_futurix/linefollow.html
+++ b/el_futurix/linefollow.html
@@ -64,7 +64,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "3pj8raWgDbA2HCElgRpJ"
     </script>
 
 
