--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -64,7 +64,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "DN3kcqEZJctQfwS7E2nV"
     </script>
 
 
