--- a/el_futurix/pcbdesign.html
+++ b/el_futurix/pcbdesign.html
@@ -59,7 +59,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "Un6FvqsAdt6VVitBedIj"
     </script>
 
 
