--- a/el_futurix/projectxpo.html
+++ b/el_futurix/projectxpo.html
@@ -63,7 +63,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "mzUFT4i46CKDfaNIGQVh"
     </script>
 
 
