--- a/el_futurix/robosoccer.html
+++ b/el_futurix/robosoccer.html
@@ -64,7 +64,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "MH6KdQW3ySZfCY7sa4R"
     </script>
 
 
