--- a/el_futurix/webwizard.html
+++ b/el_futurix/webwizard.html
@@ -63,7 +63,7 @@
 
 
     <script>
-    var competitionID = "s7rC0nFh5afu6P98XQHX"
+    var competitionID = "R4YIp1tO2d6Xtzhgx9dh"
     </script>
 
 
