--- a/el_futurix/projectxpo.html
+++ b/el_futurix/projectxpo.html
@@ -51,8 +51,8 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 2 - 4 </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 499 </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 499 / Team </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Abirami M - 9345445205</div>
                 <div class="val">Logeshwaran K - 8610687966</div>
