--- a/el_futurix/paperpresentation.html
+++ b/el_futurix/paperpresentation.html
@@ -50,8 +50,8 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 1 - 4 </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 499/TEAM </span></div>
-            <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 499 / Team </span></div>
+            <div class="key">Registration Deadline : <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Dhevitha S - 6379688496</div>
                  <div class="val">Renika R V - 9715646764</div>
