--- a/el_futurix/ipl.html
+++ b/el_futurix/ipl.html
@@ -50,7 +50,7 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key">Team size : <span class="val"> 2 - 4 </span></div>
-            <div class="key">Registration Fee : <span class="val"> ₹ 299 </span></div>
+            <div class="key">Registration Fee : <span class="val"> ₹ 299  / Team </span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Sabarish A - 6374187114</div>
