--- a/el_futurix/general.html
+++ b/el_futurix/general.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
+            <h1 id="event_name">Register for The Workshop</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -47,6 +47,7 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
+            <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 200 </span></div>
             <div class="key">Registration Deadline : <span class="val"> 01 November 2024 </span></div>
             <div class="key">For Further Information :
