--- a/el_futurix/robosoccer.html
+++ b/el_futurix/robosoccer.html
@@ -49,6 +49,7 @@
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
+            <div class="key"><span class="val">Registration for this Event can Only be done in this website from 14/10/2024 - 12.00 PM. </span></div>
             <div class="key">Team size: <span class="val"> 1 - 5 </span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 499 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
