--- a/el_futurix/circuit.html
+++ b/el_futurix/circuit.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for Maze Solver</h1>
+            <h1 id="event_name">Register for CIRCUIT INNOVATORS CONTEST</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -42,7 +42,7 @@
             <img src="img/thumbs/CIRCUIT INNOVATORS CONTEST.webp" alt="Competition Image">
         </div>
         <div class="description">
-            <h1>CIRCUIT INNOVATORS CHALLENGE</h1>
+            <h1>CIRCUIT INNOVATORS CONTEST</h1>
             <p>
                 Gain practical expertise with debugging techniques and delve into the principles of circuit design and ace this ""Circuit Design and Debug"" event. Discover how to choose the right parts, solve problems, and analyse circuit schematics. By using their problem-solving abilities to recognise and address typical difficulties, participants will construct and test their own circuits.
              <br>
