--- a/el_futurix/contact.html
+++ b/el_futurix/contact.html
@@ -47,6 +47,7 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             width: 22%;
             margin: 20px;
+            margin-left: 10px;
         }
         .contact-card:hover {
             transform: translateY(-10px);
