--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     width: 100%;
     height: 100%;
   }
+
+  #load{
+    position: fixed;
+    z-index: 10000;
+  }
 </style>
 
 <body>
@@ -35,6 +40,8 @@
   <!-- <div class="bac_d"> -->
   <!-- <iframe id="frm_bk_drp" src="/backdrop.html" width="100px" height="100px" frameborder="0"></iframe> -->
   <!-- </div> -->
+
+  <!-- <div id="load"><img src="el_futurix/img/load.gif" alt=""></div> -->
 
   <canvas id="rendercv"></canvas>
 
@@ -143,11 +150,15 @@
       document.getElementsByClassName("menu")[0].onclick = menu_op
     }
 
+    // load = document.getElementById("load")
+    // load.style.marginTop = (window.innerHeight - load.offsetHeight)/2 + "px";
+    // load.style.marginLeft = (window.innerWidth - load.offsetWidth)/2 + "px";
+
     window.addEventListener('message', (event) => {
       if(event.data == "home")
       page_show(cur_page,"home")
     });
-    
+
   </script>
 </body>
 
