--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -32,6 +32,26 @@
 
                 <h4 onclick="add_mem_fld(3)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
+                <div id="payment_img">
+                    <div class="sct_dtl">Account Name: <br><span>BIT-CENTRE FOR ADVANCED STUDIES</span></div>
+                    <div class="sct_dtl">Account Number: <br></b><span>911010036862582</span></div>
+                    <div class="sct_dtl">IFSC Code: <br><span>UTIB0000368</span></div>
+                    <div class="sct_dtl">Payment proof</div>
+                    <input type="file" id="imageInput" accept="image/*"  required/>
+
+                    <div class="sct_dtl">Transaction ID</div>
+                    <input class="ver" id="traction-id" type="text">
+
+                    <div class="sct_dtl">Transaction Ammount</div>
+                    <input class="ver" id="traction-ammount" type="text">
+
+                    <div class="sct_dtl">Transaction Date</div>
+                    <input class="ver" id="traction-date" type="text">
+
+                    <div class="sct_dtl">Account holder name</div>
+                    <input class="ver" id="holder-name" type="text">
+                </div>                
+
                 <input id="submit" type="submit" value="Submit">
             </form>
         </div>
