--- a/el_futurix/get_details.html
+++ b/el_futurix/get_details.html
@@ -158,14 +158,7 @@
         
             <div class="form-group">
                 <label for="stream-of-study">Stream of Study:</label>
-                <!-- <input type="text" id="stream-of-study" name="stream-of-study" placeholder="Enter your stream (eg: engineering)" required> -->
-                <select id="stream-of-study" name="stream-of-study" required>
-                    <option value="">--Select--</option>
-                    <option value="Mr.">Mr.</option>
-                    <option value="Ms.">Ms.</option>
-                    <option value="Dr.">Dr.</option>
-                    <option value="Others">Others</option>
-                </select>
+                <input type="text" id="stream-of-study" name="stream-of-study" placeholder="eg: B.E, B.Tech, M.E, etc." required>
             </div>
         
             <div class="form-group">
