--- a/el_futurix/test.html
+++ b/el_futurix/test.html
@@ -32,7 +32,7 @@
 
                 <h4 onclick="add_mem_fld(3)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
-                <div id="payment_img">
+                <!-- <div id="payment_img">
                     <div class="sct_dtl">Account Name: <br><span>BIT-CENTRE FOR ADVANCED STUDIES</span></div>
                     <div class="sct_dtl">Account Number: <br></b><span>911010036862582</span></div>
                     <div class="sct_dtl">IFSC Code: <br><span>UTIB0000368</span></div>
@@ -50,7 +50,7 @@
 
                     <div class="sct_dtl">Account holder name</div>
                     <input class="ver" id="holder-name" type="text">
-                </div>                
+                </div>                 -->
 
                 <input id="submit" type="submit" value="Submit">
             </form>
