--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="profile">
       <div class="txt">
-        <div class="a">profile</div>
+        <div class="a">Loading</div>
       </div>
       <img class="pic" src="el_futurix/img/profile_blank.png" alt="">
       <div class="profile_pop">
