--- a/el_futurix/committee.html
+++ b/el_futurix/committee.html
@@ -252,7 +252,7 @@
                         <h3>Mr. Kishore Kanna P</h3>
                         <p>Overall Coordinator</p>
                     </div>
-                    <img src="img/contact/kishore.jpg" alt="Person Image">
+                    <img src="img/contact/IMG.jpg" alt="Person Image">
                 </div>
                 <div class="card-back">
                     <p>Phone: +91 7504042775</p>
