--- a/el_futurix/cad.html
+++ b/el_futurix/cad.html
@@ -42,7 +42,7 @@
             <img src="img/thumbs/cad.webp" alt="Competition Image">
         </div>
         <div class="description">
-            <h1>CAD MEASTRO CAHALLENGE</h1>
+            <h1>CAD MEASTRO CHALLENGE</h1>
             <p>
                 "Using cutting-edge CAD software, participants will be required to design and build creative 3D creations. Show off your technical prowess, grasp of fundamental design principles, and capacity to convert abstract concepts into concrete digital works of art."
             <br>
