--- a/el_futurix/combo.html
+++ b/el_futurix/combo.html
@@ -43,10 +43,10 @@
 
     <div class="container">
         <h1>Coming Soon!</h1>
-        <p>We are working hard to bring you a great experience. Stay tuned!</p>
+        <!-- <p>We are working hard to bring you a great experience. Stay tuned!</p>
         <div class="timer" id="timer">
             Launching in <span id="days">0</span> days!
-        </div>
+        </div> -->
     </div>
 
     <script>
