--- a/el_futurix/combo1.html
+++ b/el_futurix/combo1.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for CIRCUIT INNOVATORS CONTEST</h1>
+            <h1 id="event_name">Register for COMBO 1</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
 
-                <h4 onclick="add_mem_fld(2)">Add member <span><img src="img/add.svg" alt=""></span></h4>
+                <h4 onclick="add_mem_fld(4)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
                 <input id="submit" type="submit" value="Submit">
             </form>
