--- a/el_futurix/combo5.html
+++ b/el_futurix/combo5.html
@@ -13,7 +13,7 @@
         <div id="frm_cnt">
             <div class="close">X</div>
             <br>
-            <h1 id="event_name">Register for CIRCUIT INNOVATORS CONTEST</h1>
+            <h1 id="event_name">Register for COMBO 5</h1>
 
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
 
-                <h4 onclick="add_mem_fld(2)">Add member <span><img src="img/add.svg" alt=""></span></h4>
+                <h4 onclick="add_mem_fld(4)">Add member <span><img src="img/add.svg" alt=""></span></h4>
 
                 <input id="submit" type="submit" value="Submit">
             </form>
@@ -45,8 +45,8 @@
             <div class="btn">REGISTER HERE</div>
             <br>
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
-            <div class="key">Team size: <span class="val"> 1-4 </span></div>
-            <div class="key">Registration Fee: <span class="val"> ₹ 199 / Team </span></div>
+            <div class="key">Team size: <span class="val"> 1 - 4 </span></div>
+            <div class="key">Registration Fee: <span class="val"> ₹ 799 / Team </span></div>
             <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Tareq M - 9360865563</div>
