--- a/el_futurix/mazesolver.html
+++ b/el_futurix/mazesolver.html
@@ -18,6 +18,14 @@
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
                 <input type="text" id="team-name" placeholder="Team name" required>
+                                
+                <br><br>
+                <div class="ip_flx ch">
+                    <input type="checkbox" id="opo" name="assurance">
+                    <label for="assurance">Iam an IEEE member</label>
+                    <input type="text" id="ieeeID" placeholder="IEEE id">
+                </div>
+
                 <br><br><br>
                 <div class="tru_con">
                     <div class="id_elm">
