--- a/el_futurix/paperpresentation.html
+++ b/el_futurix/paperpresentation.html
@@ -20,10 +20,16 @@
                 <input type="text" id="team-name" placeholder="Team name" required>
                 
                 <br><br>
-                <div class="ip_flx ch">
+                <div class="ip_flx ch_">
                     <input type="checkbox" id="opo" name="assurance">
                     <label for="assurance">Iam an IEEE member</label>
                     <input type="text" id="ieeeID" placeholder="IEEE id">
+                </div>
+
+                <br>
+                <div class="ip_flx">
+                    <label for="assurance">Abstract link:</label><br>
+                    <input type="text" id="abs_lnk" placeholder="drive,slides,docs,etc">
                 </div>
 
                 <br><br><br>
