--- a/el_futurix/combo5.html
+++ b/el_futurix/combo5.html
@@ -18,6 +18,16 @@
             <form id="studentForm" action="" method="" onsubmit="">
                 <label for="college">Team name</label>
                 <input type="text" id="team-name" placeholder="Team name" required>
+
+                
+
+                <br>
+                <div class="ip_flx">
+                    <label for="assurance">Abstract link:</label><br>
+                    <input type="text" id="abs_lnk" placeholder="drive,slides,docs,etc">
+                </div>
+
+
                 <br><br><br>
                 <div class="tru_con">
                     <div class="id_elm">
