--- a/el_futurix/combo4.html
+++ b/el_futurix/combo4.html
@@ -39,7 +39,7 @@
 
      <div class="container">
         <div class="image">
-            <img src="img/combo/combo4.png" alt="Competition Image">
+            <img src="img/combo/WhatsApp Image 2024-10-21 at 04.34.26_47316390.jpg" alt="Competition Image">
         </div>
         <div class="description">
             <div class="btn">REGISTER HERE</div>
