--- a/el_futurix/pcbdesign.html
+++ b/el_futurix/pcbdesign.html
@@ -44,6 +44,8 @@
             <h1>PCB DESGINING</h1>
             <p>
                 Get hands-on experience in designing your very own printed circuit boards at our PCB Designing Workshop! Utilizing KiCad software, a leading open-source tool in the electronics industry, you'll learn everything from schematic capture to board layout and routing. Guided by experts, this workshop is perfect for engineering students, hobbyists, or professionals eager to enhance their electronic design skills. By the end of the session, you'll have a fully designed PCB ready for fabrication. Don't miss this chance to bring your electronic ideas to life!
+            <br>
+                <a class="rule_book" href="https://drive.google.com/file/d/1ysQBHon18L1-9gb4cWrLehwDAHY8TncF/view?usp=drive_link" target="_blank">SCHEDULE</a>
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
