--- a/el_futurix/cyber.html
+++ b/el_futurix/cyber.html
@@ -45,6 +45,8 @@
             <h1>CYBER SECURITY</h1>
             <p>
                 In today's digital world, security is paramount. This Cyber Security Hands-On Workshop will equip participants with the skills to understand and defend against cyber threats. Covering topics like ethical hacking, network security, encryption, and vulnerability analysis, this session offers practical, real-world applications of cybersecurity principles. Engage in live demonstrations and learn how to secure systems and data in an ever-evolving digital landscape. Ideal for anyone interested in protecting digital assets and safeguarding against cyber attacks.
+           <br>
+                <a class="rule_book" href="https://drive.google.com/file/d/1ysQBHon18L1-9gb4cWrLehwDAHY8TncF/view?usp=drive_link" target="_blank">SCHEDULE</a>
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
