--- a/el_futurix/arvr.html
+++ b/el_futurix/arvr.html
@@ -45,6 +45,8 @@
             <h1>AR/VR</h1>
             <p>
                Step into the future of immersive technology with our hands-on Augmented Reality (AR) and Virtual Reality (VR) workshop. This session will cover the fundamentals of AR and VR, including how these technologies work and their potential applications in various industries. Participants will get practical experience in designing and interacting with AR/VR environments using popular platforms and tools. Whether you're a beginner or have some experience, this workshop offers a thrilling opportunity to create immersive worlds and explore new dimensions of reality.
+            <br>
+                <a class="rule_book" href="https://drive.google.com/file/d/1ysQBHon18L1-9gb4cWrLehwDAHY8TncF/view?usp=drive_link" target="_blank">SCHEDULE</a>
             </p>
             <div class="btn">REGISTER HERE</div>
             <br>
