--- a/el_futurix/combo4.html
+++ b/el_futurix/combo4.html
@@ -47,7 +47,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website. </span></div>
             <div class="key">Team size: <span class="val"> 1 </span></div>
             <div class="key">Registration Fee: <span class="val"> ₹ 399 / PERSON </span></div>
-            <div class="key">Registration Deadline: <span class="val"> 02 November 2024 </span></div>
+            <div class="key">Registration Deadline: <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Tareq M - 9360865563</div>
                  <div class="val">Karthick - 9345358986</div>
