--- a/el_futurix/webwizard.html
+++ b/el_futurix/webwizard.html
@@ -52,7 +52,7 @@
             <div class="key"><span class="val">Registration for this event can Only be done on this Official website.</span></div>
             <div class="key">Team size : <span class="val">1 - 2</span></div>
             <div class="key">Registration Fee : <span class="val"> ₹ 349/Team of 4 (or) ₹ 249/Team of 2 </span></div>
-            <div class="key">Registration Deadline: <span class="val"> 02 November </span></div>
+            <div class="key">Registration Deadline: <span class="val"> 04 November 2024 (Extended) </span></div>
             <div class="key"> For Further Information:
                 <div class="val">Vithyavarsha V - 7558144787</div>
                  <div class="val">Tamilarasu R - 9092272586</div>
