--- a/el_futurix/get_details.html
+++ b/el_futurix/get_details.html
@@ -210,7 +210,7 @@
                 document.getElementById("designation").value = "Student";
             } else {
                 console.log("No user is signed in.");
-                alert("login before registering...");
+                // alert("login before registering...");
             }
         }).catch((error) => {
             console.error("Error getting user details:", error);
